# Hemocell-Performance-Benchmarks

./: .gitignore  CMakeLists.txt  README.md  filter.filter
cube-benchmark/: README.md  cube-benchmark.cpp  meta.yml
cube-fractional-imbalance/: config.xml  cube-fractional-imbalance.cpp  meta.yml
cube-imbalance-domain-decomp/: README.md  config.xml  cube-imbalance-domain-decomp.cpp  meta.yml
cube-imbalance-hemo/: README.md  cube-imbalance-hemo.cpp  meta.yml
flow-part-filled/: README.md  meta.yml
misc/: RBC-h018.pos  README.md  filter.filter  profiler.cpp  profiler.h  run_script_template_das.job
rebalancing-cost/: README.md  config.xml  meta.yml  rebalancing-cost.cpp
rebalancing-cost/tmp_1/log_1/: logfile
rebalancing-cost/tmp_1_0/checkpoint/: checkpoint.xml  lattice.plb  particleField.plb
rebalancing-cost/tmp_1_0/log_1/: logfile  logfile.0.statistics
rebalancing-cost/tmp_1_1/checkpoint/: checkpoint.xml  lattice.plb  (+1 more)
scripts/: exp-to-csv.py  generate-meta-data-yaml.py  meta.yml  setup-experiment.py
stent-strut-casper/: RBC.POS  config.xml  meta.yml  stent-strut_casper.stl  stent_strut.cpp
stent-strut-casper/snellius-scripts/: config_casper.xml  submit_casper.sh
stent-strut-reference/: CMakeLists.txt  meta.yml  stent-strut-reference.cpp  stent-strut_reference.stl
stent-strut-reference/snellius-scripts/: config_reference.xml  submit_reference.sh
stent-strut-wall-stent/: CMakeLists.txt  PLT.POS  meta.yml  stent-strut-wall-stent.cpp  stent-strut_wallstent.stl
stent-strut-wall-stent/snellius-scripts/: config_wallstent.xml  submit_wallstent.sh
(+335 files in other folders)
